frontend/tiny_camiot/test/bad/badtest1.cam

data Maybe a where
  Just    : a -> Either a a
  Nothing : Maybe a